k8s/attic/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attic-api
  namespace: attic
spec:
  replicas: 2
  selector:
    matchLabels:
      app: attic-api
  template:
    metadata:
      labels:
        app: attic-api
    spec:
      containers:
      - name: attic-api
        image: ghcr.io/zhaofengli/attic:b8c5ab4518f776624fee261385abb98348cd26cf
        args: ["--mode", "api-server", "-f", "/etc/attic/atticd.yaml"]
        volumeMounts:
        - name: config
          mountPath: "/etc/attic"
          readOnly: true
        ports:
        - containerPort: 8080
      volumes:
      - name: config
        configMap:
          name: attic-config
          items:
            - key: "atticd.yaml"
              path: "atticd.yaml"
