k8s/attic/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attic-api
  namespace: attic
spec:
  selector:
    app: attic-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
