k8s/attic/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attic-api
  namespace: attic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  rules:
    - host: cache.jessie.cafe
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attic-api
                port:
                  name: http
  tls:
  - hosts:
    - cache.jessie.cafe
    secretName: attic-api-cert
